make a post added

--- a/frontend/src/pages/viewBlog.css
+++ b/frontend/src/pages/viewBlog.css
@@ -23,29 +23,28 @@ body{
     font-family: "work sans", serif;
 }
 
-
 .blogTitle {
     font-size: 37px;
 }
 
-.userName {
+.blogContainer .userName {
     font-size: 20px;
     margin-bottom: 30px;
     margin-top: 10px;
 }
 
-.blogText {
+.blogContainer .blogText {
     font-size: 20px;
 }
 
-img {
+.blogContainer img {
     width: 750px;
     height: auto;
     padding-bottom: 30p;
   }
 
 @media (max-width: 768px) {
-img {
+.blogContainer img {
     max-width: 80%;     }
 }
 
@@ -56,14 +55,7 @@ img {
 }
 }
 
-
 @media (max-width: 480px) {
-img {
+.blogContainer img {
     max-width: 60%;    }
 }
-
-  
-  
-  
-  
-  
