--- a/frontend/src/pages/AddBlog.css
+++ b/frontend/src/pages/AddBlog.css
@@ -6,14 +6,14 @@ body{
   font-family: "work sans", serif;
 }
 
-#loginform html{
+html{
   font-size: 100%;
 }
 
-#loginform{
+#postingform{
   max-width: 500px;
-  min-width: 300px;
-  max-height: 700px;
+  min-width: 500px;
+  /* max-height: 700px; */
   width: 30%;
   height: 60%;
   margin: 200px auto;
@@ -29,7 +29,7 @@ body{
   font-size: 2rem;
 }
 
-#loginform .row{
+#postingform .row{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,7 +38,7 @@ body{
 
 }
 
-#loginform .row input{
+#postingform .row input{
   width: 80%;
   box-sizing: border-box;
   border: none;
@@ -49,29 +49,29 @@ body{
   transition: box-shadow 0.2s ease-in;
 }
 
-#loginform .row input:focus{
+#postingform .row input:focus{
   box-shadow: inset 0px -3px 0px 0px rgba(34,193,195,0.7);
   outline: none;
 }
 
-#loginform .row input::-webkit-input-placeholder{
+#postingform .row input::-webkit-input-placeholder{
   opacity: 1;
   transition: opacity 0.25s ease-out;
 }
 
-#loginform .row input:hover::-webkit-input-placeholder,
-#loginform .row input:focus::-webkit-input-placeholder{
+#postingform .row input:hover::-webkit-input-placeholder,
+.row input:focus::-webkit-input-placeholder{
   opacity: 0;
 }
 
-#loginform .row label{
+#postingform .row label{
   align-self: start;
   padding-left: 4.5rem;
   padding-bottom: 0.5rem;
   color: rgba(187,187,187,0.9);
 }
 
-#loginform .row button{
+#postingform .row button{
   border-radius: 25px;
   width: 80%;
   height: 40px;
@@ -85,13 +85,48 @@ body{
   transition: opacity 0.25s ease-out;
 }
 
-#loginform .row button:hover{
+#postingform .row button:hover{
   opacity: 0.8;
 }
 
-#loginform #button{
+#button{
   padding-bottom: 1.5rem;
 }
 
+#postingform img {
+  width: 200px;
+  height: auto;
+  padding-top: 5px;
+  padding-left: 10px;
+  margin: auto;
+  align-items: center;
+}
 
+
+#postingform .custom-textarea {
+  width: 300px;
+  height: 200px;
+  resize: none;
+}
+
+
+
+@media (max-width: 768px) {
+  #postingform img {
+      max-width: 80%;     }
+}
+  
+@media (min-width: 768px) {
+#postingform{
+    justify-content: center;
+    max-width: 750px;
+  }
+}
+
+@media (max-width: 480px) {
+  #postingform img {
+    max-width: 60%;    
+  }
+}
+  
 
