--- a/frontend/src/pages/Blogs/viewBlog.css
+++ b/frontend/src/pages/Blogs/viewBlog.css
@@ -41,7 +41,7 @@ body{
 img {
     width: 750px;
     height: auto;
-    padding-bottom: 30p;
+    padding-bottom: 30px;
   }
 
 @media (max-width: 768px) {
