--- a/frontend/src/pages/Components/navBar.css
+++ b/frontend/src/pages/Components/navBar.css
@@ -1,5 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
+.grid{
+    margin-top: 30px;
+    display: flex;
+    /* grid-auto-columns: max-content; */
+    /* grid-area: auto; */
+    /* grid-auto-rows: auto; */
+    flex-direction: row;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 *,
 *:after,
 *:before {
@@ -7,7 +20,7 @@
 }
 
 :root {
-    --header-outer-height: 110px;
+    --header-outer-height: 130px;
     --header-inner-height: 70px;
     --header-height-difference: calc(
             var(--header-outer-height) - var(--header-inner-height)
@@ -15,13 +28,100 @@
     --header-bg: #010144;
 }
 
+.profile-head{
+
+    height: var(--header-outer-height);
+    width: max-content;
+    float: left;
+    /*margin-left: 20px;*/
+    /* justify-content: center; */
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    align-items: center;
+}
+.profile-head img
+{
+    width: var(--header-inner-height);
+    height: var(--header-inner-height);
+    clip-path: circle(at center);
+    object-fit: cover;
 
 
+    margin: 0;
+}
+.text-prof{
+display: grid;
+
+    grid-gap: 10px;
+    flex-direction: row;
+
+}
+
+.name{
+    float: left;
+    margin: 0;
+    color: white;
+}
+
+.logout{
+   margin: 0;
+    float: left;
+}
+.logout:hover{
+    margin: 0;
+    float: left;
+    background-color: coral;
+    color: black;
+}
+.create-btn{
+    width: max-content;
+    height: 40px;
+    color: #010144;
+    cursor: pointer;
+    background-color: #ffad00;
+    border-radius: 30px;
+    justify-content: center;
+    align-items: center;
+    font-family: Poppins,sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 22px;
+    padding-left: 10px;
+    padding-right: 10px;
+    float: left;
+    display: flex;
+
+}
+.create-btn:hover{
+    width: max-content;
+    height: 40px;
+    color: #010144;
+    cursor: pointer;
+    background-color: #f9ff00;
+    border-radius: 30px;
+    justify-content: center;
+    align-items: center;
+    font-family: Poppins,sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 22px;
+    padding-left: 10px;
+    padding-right: 10px;
+    float: left;
+    display: flex;
+
+}
 .responsive-wrapper {
-    width: 90%;
-    max-width: 1280px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+
+}
+.header-logo{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Sticky header */
@@ -29,15 +129,18 @@
     /* Make it stick */
     height: var(--header-outer-height);
     position: sticky;
+    min-width: max-content;
     top: calc(
-            var(--header-height-difference) * -1
-    ); /* Multiply by -1 to get a negative value */
+            -20px
+    );
     display: flex;
     align-items: center;
 
     /* Other */
     background-color: var(--header-bg);
     box-shadow: 0 2px 10px 0 rgba(0,0,0, 0.1);
+    justify-content: center;
+    z-index: 100;
 }
 .buttonset{
     position: relative;
@@ -91,8 +194,10 @@
 .header-inner {
     /* Make it stick */
     height: var(--header-inner-height);
+    margin-top: 20px;
     position: sticky;
     top: 0;
+    width: 90%;
 
     /* Other */
     display: flex;
@@ -101,10 +206,7 @@
 }
 
 /* Styling of other elements */
-.header-logo img {
-    display: block;
-    height: calc(var(--header-inner-height) - 30px);
-}
+
 
 .header-navigation {
     display: flex;
@@ -135,7 +237,7 @@
     float: left;
     width: 60px;
     height: 60px;
-    margin-top: 5px;
+    /*margin-top: 5px;*/
 
 }
 
@@ -210,6 +312,13 @@
     }
 
     .header-navigation button {
+        display: none;
+    }
+
+}
+@media (max-width: 800px) {
+
+    .header-logo{
         display: none;
     }
 }
