--- a/frontend/src/pages/profileView.css
+++ b/frontend/src/pages/profileView.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh; 
-    background-color: rgba(118, 83, 83, 1);
+    background-color: aliceblue;
   }
   
   .profile-box {
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    border-radius: 5%;
 }
 
   
