--- a/frontend/src/pages/Components/ticket.css
+++ b/frontend/src/pages/Components/ticket.css
@@ -17,8 +17,10 @@ width: 100%;
 .left{
 width: 70%;
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     padding-left: 20px;
+    flex-direction: column;
+    justify-content: left;
 }
 .right{
 width: 20%;
